# gba_test

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  framework.yml  gba_test.yml  gba_test_macros.yml  macros.yml  mgba-rom-test.yml
data/: README.md
gba_test/: CHANGELOG.md  Cargo.toml  README.md  build.rs  test.gba  test.mb
gba_test/.cargo/: config.toml
gba_test/data/: font.pal
gba_test/linker_scripts/: mb.ld
gba_test/src/: alignment.rs  allocator.rs  contains.rs  lib.rs  log.rs  outcome.rs  runner.rs  runtime.rs  runtime_mb.rs  termination.rs  test.rs  test_case.rs  tests.rs
gba_test/src/mmio/: bios.rs  mod.rs
gba_test/src/ui/: cursor.rs  entry.rs  mod.rs  modules.rs  palette.rs  panic.rs
gba_test_macros/: CHANGELOG.md  Cargo.toml  README.md
gba_test_macros/src/: lib.rs
gba_test_macros/tests/trybuild/: duplicate_name.rs  duplicate_name.stderr  ignore_invalid_arguments.rs  ignore_invalid_arguments.stderr  not_a_function.stderr  result_should_panic.rs  result_should_panic.stderr  should_panic_arguments_not_name_value.rs  should_panic_arguments_not_name_value.stderr  should_panic_incorrect_argument_name.rs  should_panic_incorrect_argument_name.stderr
macros/: Cargo.toml  README.md
macros/src/: lib.rs
macros/tests/: trybuild.rs
macros/tests/trybuild/: not_a_function.rs
src/: bincode_config.rs  display.rs  flavors.rs  font.rs  gba.ld  lib.rs  outcome.rs  runner.rs  runtime.rs  test_case.rs  trial.rs  ui.rs
src/ui/: cursor.rs  entry.rs  font.rs  mod.rs
tests/: conclusion.rs
tests/allocate/: Cargo.toml
tests/allocate/.cargo/: config.toml
tests/allocate/src/: lib.rs
tests/fail/: Cargo.toml
tests/fail/.cargo/: config.toml
tests/fail/src/: lib.rs
tests/ignore/: Cargo.toml
tests/ignore/.cargo/: config.toml
tests/ignore/src/: lib.rs  rsrt0.s
tests/ignore_with_message/: Cargo.toml
tests/ignore_with_message/src/: lib.rs
tests/multiple/: Cargo.toml
tests/multiple/src/: lib.rs
tests/multiple_ignore/: Cargo.toml
tests/multiple_ignore/src/: lib.rs
tests/parse_executable/: Cargo.toml  test_data.json
tests/parse_executable/src/: main.rs
tests/pass/: Cargo.toml  gba_test
tests/pass/.cargo/: config.toml
tests/pass/src/: lib.rs
tests/result_fail/: Cargo.toml
tests/result_fail/src/: lib.rs
tests/result_pass/: Cargo.toml
tests/result_pass/src/: lib.rs
tests/should_panic_fail/src/: lib.rs
tests/should_panic_message_fail/: Cargo.toml
tests/should_panic_message_fail/src/: lib.rs
tests/should_panic_message_pass/: Cargo.toml
tests/should_panic_message_pass/src/: lib.rs
tests/should_panic_pass/: Cargo.toml
tests/should_panic_pass/src/: lib.rs
tests/simple/: Cargo.toml
tests/simple/src/: lib.rs
tests/single/: Cargo.toml  build.rs
tests/single/.cargo/: config.toml
tests/single/src/: lib.rs
