[workspace]
members = [
    "macros",
]
exclude = [
    "tests/"
]

[package]
name = "gba_test_runner"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
bincode = {version = "2.0.0-rc.3", optional = true, default-features = false, features = ["serde"]}
gba_test_macros = {version = "0.1.0", path = "macros/", optional = true}
serde = {version = "1.0.160", optional = true, default-features = false}

[dev-dependencies]
cargo_metadata = "0.15.4"

[features]
alloc = ["serde?/alloc"]
bincode = ["dep:bincode", "serde"]
macros = ["gba_test_macros"]
runner = ["bincode"]
serde = ["dep:serde"]
