[workspace]
members = [
    "macros",
]
exclude = [
    "tests/"
]

[package]
name = "gba_test"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
gba_test_macros = {version = "0.1.0", path = "macros/", optional = true}
postcard = {version = "1.0.4", optional = true, default-features = false}
serde = {version = "1.0.160", optional = true, default-features = false}
voladdress = { version = "1.3.0", optional=true }

[dev-dependencies]
cargo_metadata = "0.15.4"
claims = "0.7.1"
serde_assert = "0.4.0"

[features]
alloc = ["serde?/alloc"]
macros = ["gba_test_macros"]
runner = ["postcard", "serde", "voladdress"]
serde = ["dep:serde"]
