[package]
name = "gba_test"
version = "0.1.4"
authors = ["Anders Evensen"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/gba_test"
description = "Testing framework for the Game Boy Advance."
categories = ["development-tools::testing", "game-development", "no-std", "no-std::no-alloc"]
keywords = ["gba", "test", "testing", "framework", "development"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
targets = ["armv5te-unknown-linux-gnueabi"]

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true

[dependencies]
gba_test_macros = {version = "0.1.0", path = "../gba_test_macros/", optional = true}
log = {version = "0.4.20", optional = true}

[dev-dependencies]
claims = "0.7.1"
mgba_log = "0.2.1"

[features]
default = ["macros"]
log = ["dep:log"]
macros = ["dep:gba_test_macros"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)"]}
