[package]
name = "gba_test_macros"
version = "0.2.0"
authors = ["Anders Evensen"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/gba_test"
description = "#[test] attribute for writing tests to be run on the Game Boy Advance."
categories = ["development-tools::testing", "game-development", "no-std", "no-std::no-alloc"]
keywords = ["gba", "test", "attribute", "macro", "testing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = {version = "2.0.15", features = ["full"]}

[dev-dependencies]
trybuild = "1.0.80"
